--- a/PruebaAplicacion/templates/usuarios/VerPerfil.html
+++ b/PruebaAplicacion/templates/usuarios/VerPerfil.html
@@ -24,6 +24,10 @@
             <input type="tel" name="telefono" maxlength="12" class="form-control" required value="{{current_user.telefono}}" readonly>
         </div>
         <div class="form-group">
+            <label for="ID">ID:</label>
+            <input type="number" name="ID" maxlength="12" class="form-control" required value="{{current_user.idUsuario}}" readonly>
+        </div>
+        <div class="form-group">
             <a href="/Usuarios/verTarjetas" class="btn btn-lg btn-success">
             <span class="glyphicon glyphicon-fire"></span>
             Metodos de pago
