--- a/Shopitesz_prueba/templates/productos/editar.html
+++ b/Shopitesz_prueba/templates/productos/editar.html
@@ -46,9 +46,12 @@
                 <span class="glyphicon glyphicon-eye-open"></span>Ver Foto
             </a>
         </div>
-        <div>
+         <div class="form-group">
             <label>especificaciones:</label>
-            <input type="file" name="especificaciones" placeholder="especificaciones del Producto" class="form-control">
+            <input type="file" name="especificaciones" placeholder="foto del Producto" class="form-control">
+            <a href="#" data-toggle="modal" data-target="#especificaciones">
+                <span class="glyphicon glyphicon-eye-open"></span>Ver especificaciones
+            </a>
         </div>
            <button type="submit" class="btn btn-primary">
                 <span class="glyphicon glyphicon-floppy-disk"></span>
@@ -71,7 +74,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">Foro del producto: <b>{{prod.nombre}}</b></h4>
+        <h4 class="modal-title">Foto del producto: <b>{{prod.nombre}}</b></h4>
       </div>
       <div class="modal-body">
         <img src="/productos/consultarImagen/{{prod.idProducto}}" width="200px" height="150px">
@@ -81,6 +84,26 @@
       </div>
     </div>
 
+  </div>
+</div>
+</div>
+
+<div id="especificaciones" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+
+<!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Especificaciones del Producto: <b>{{prod.nombre}}</b></h4>
+      </div>
+      <div class="modal-body">
+        <img src="/productos/consultarEspecificaciones/{{prod.idProducto}}" width="200px" height="150px">
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+      </div>
+    </div>
   </div>
 </div>
 </div>
