--- a/PruebaAplicacion/templates/productos/consultaGeneral.html
+++ b/PruebaAplicacion/templates/productos/consultaGeneral.html
@@ -19,6 +19,7 @@
             <th>CATEGORIA</th>
             <th>PRECIO</th>
             <th>IMAGEN</th>
+            <th>ESPECIFICACIONES</th>
             <th>STOCK</th>
             <th>ESTATUS</th>
             {% if current_user.is_authenticated and current_user.is_vendedor() %}
@@ -32,6 +33,7 @@
                 <td>{{prod.categoria.nombre}}</td>
                 <td>{{prod.precioVenta}}</td>
                 <td><img src="/productos/consultarImagen/{{prod.idProducto}}" width="100px" height="80px"></td>
+                <td><img src="/productos/consultarEspecificaciones/{{prod.idProducto}}" width="100px" height="80px"></td>
                 <td>{{prod.existencia}}</td>
                 <td>{{prod.estatus}}</td>
                 {% if current_user.is_authenticated and current_user.is_vendedor() %}
