--- a/PruebaAplicacion/templates/tarjetas/tarjetaregistrada.html
+++ b/PruebaAplicacion/templates/tarjetas/tarjetaregistrada.html
@@ -7,8 +7,8 @@
 {{super()}}
 <div>
     <h1 class="bg-primary text-center">Listado de Metodos de pagos</h1>
-     {% if current_user.is_authenticated () %}
-    <a href="/usuarios/agregarNuevaTarjeta" class="btn btn-danger mb-3">
+     {% if current_user.is_authenticated() %}
+    <a href="/usuarios/agregarNuevaTarjeta/{{current_user.idUsuario}}" class="btn btn-danger mb-3">
          <span class="glyphicon glyphicon-plus-sign"></span>
         Agregar Nueva Tarjeta
     </a>
