--- a/PruebaAplicacion/templates/tarjetas/tarjetas.html
+++ b/PruebaAplicacion/templates/tarjetas/tarjetas.html
@@ -4,7 +4,7 @@
   <script src="https://kit.fontawesome.com/2530d1feb2.js" crossorigin="anonymous"></script>
 <h1>Añadir Tarjeta de credito/Debito</h1>
 
-<form action="/tarjetas/agregar" class="TarjetasCuadro" method="post" enctype="multipart/form-data">
+<form action="/tarjetas/agregar/{{current_user.idUsuario}}" class="TarjetasCuadro" method="post" enctype="multipart/form-data">
         <div class="contenedor2">
         <div>
             <label for="ID" >ID:</label>
@@ -38,7 +38,7 @@
             <input type="text" name="Estatus" maxlength="1"  frequired class="form-control">
         </div>
             <input type="submit" value="Registrar Tarjeta"  class="btn btn-danger">
-            <a href='/Usuarios/verTarjetas' class="btn btn-danger">Cancelar</a>
+            <a href='/Usuarios/verTarjetas/{{current_user.idUsuario}}' class="btn btn-danger">Cancelar</a>
   </div>
 
 </form>
