--- a/Shopitesz_prueba/templates/productos/editar.html
+++ b/Shopitesz_prueba/templates/productos/editar.html
@@ -46,12 +46,9 @@
                 <span class="glyphicon glyphicon-eye-open"></span>Ver Foto
             </a>
         </div>
-         <div class="form-group">
+        <div>
             <label>especificaciones:</label>
-            <input type="file" name="especificaciones" placeholder="foto del Producto" class="form-control">
-            <a href="#" data-toggle="modal" data-target="#especificaciones">
-                <span class="glyphicon glyphicon-eye-open"></span>Ver especificaciones
-            </a>
+            <input type="file" name="especificaciones" placeholder="especificaciones del Producto" class="form-control">
         </div>
            <button type="submit" class="btn btn-primary">
                 <span class="glyphicon glyphicon-floppy-disk"></span>
@@ -74,7 +71,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">Foto del producto: <b>{{prod.nombre}}</b></h4>
+        <h4 class="modal-title">Foro del producto: <b>{{prod.nombre}}</b></h4>
       </div>
       <div class="modal-body">
         <img src="/productos/consultarImagen/{{prod.idProducto}}" width="200px" height="150px">
@@ -84,26 +81,6 @@
       </div>
     </div>
 
-  </div>
-</div>
-</div>
-
-<div id="especificaciones" class="modal fade" role="dialog">
-  <div class="modal-dialog">
-
-<!-- Modal content-->
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">Especificaciones del Producto: <b>{{prod.nombre}}</b></h4>
-      </div>
-      <div class="modal-body">
-        <img src="/productos/consultarEspecificaciones/{{prod.idProducto}}" width="200px" height="150px">
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
-      </div>
-    </div>
   </div>
 </div>
 </div>
