--- a/Shopitesz_prueba/templates/usuarios/editar.html
+++ b/Shopitesz_prueba/templates/usuarios/editar.html
@@ -5,7 +5,7 @@
     <form action="/Usuarios/modificar" method="post">
         <div class="form-group">
             <label for="nombre">Nombre completo:</label>
-            <input class="form-control form-control-lg" type="text" name="nombre" maxlength="50"  placeholder="Nombre Completo"  value="{{current_user.nombreCompleto}}"  required>
+            <input class="form-control form-control-lg" type="text" name="nombre" maxlength="50"  placeholder="Nombre Completo"  value="{{current_user.nombreCompleto}}"  required readonly>
         </div>
         <div class="form-group">
             <label for="email">Email:</label>
