--- a/Shopitesz_prueba/templates/productos/editar.html
+++ b/Shopitesz_prueba/templates/productos/editar.html
@@ -49,12 +49,19 @@
         <div>
             <label>especificaciones:</label>
             <input type="file" name="especificaciones" placeholder="especificaciones del Producto" class="form-control">
+             <a href="#" data-toggle="modal" data-target="#especificaciones">
+                <span class="glyphicon glyphicon-eye-open"></span>Ver Foto
+            </a>
         </div>
            <button type="submit" class="btn btn-primary">
                 <span class="glyphicon glyphicon-floppy-disk"></span>
                 Guardar
             </button>
            <a href="#" class="btn btn-danger" data-toggle="modal" data-target="#borrar">
+                <span class="glyphicon glyphicon-trash"></span>
+                Poner en Inactivo
+            </a>
+            <a href="#" class="btn btn-danger" data-toggle="modal" data-target="#eliminar">
                 <span class="glyphicon glyphicon-trash"></span>
                 Eliminar
             </a>
@@ -64,7 +71,28 @@
             </a>
     </form>
 
- <div id="foto" class="modal fade" role="dialog">
+ <div id="especificaciones" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">especificaciones del producto: <b>{{prod.nombre}}</b></h4>
+      </div>
+      <div class="modal-body">
+        <img src="/productos/consultarEspecificaciones/{{prod.idProducto}}" width="200px" height="150px">
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+      </div>
+    </div>
+
+  </div>
+</div>
+</div>
+
+<div id="foto" class="modal fade" role="dialog">
   <div class="modal-dialog">
 
     <!-- Modal content-->
@@ -85,7 +113,8 @@
 </div>
 </div>
 
-<div id="borrar" class="modal fade" role="dialog">
+
+<div id="eliminar" class="modal fade" role="dialog">
   <div class="modal-dialog">
 
     <!-- Modal content-->
@@ -98,7 +127,7 @@
         <p>¿ Estas seguro de eliminar el Producto:<b>{{prod.nombre}} ?</b> </p>
       </div>
       <div class="modal-footer">
-          <a class="btn btn-primary" href="/productos/eliminar/{{prod.idProducto}}">Aceptar</a>
+          <a class="btn btn-primary" href="/productis/eliminacionfisica/{{prod.idProducto}}">Aceptar</a>
           <button type="button" class="btn btn-info" data-dismiss="modal">Cancelar</button>
       </div>
     </div>
@@ -106,6 +135,28 @@
   </div>
 </div>
 
+
+
+<div id="borrar" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Eliminacion logica de producto</h4>
+      </div>
+      <div class="modal-body">
+        <p>¿ Estas seguro de eliminar logicamente el producto:<b>{{prod.nombre}} ?</b> </p>
+      </div>
+      <div class="modal-footer">
+          <a class="btn btn-primary" href="/productos/eliminar/{{prod.idProducto}}">Aceptar</a>
+          <button type="button" class="btn btn-info" data-dismiss="modal">Cancelar</button>
+      </div>
+    </div>
+
+  </div>
+</div>
 
 
 
