--- a/PruebaAplicacion/templates/comunes/menu.html
+++ b/PruebaAplicacion/templates/comunes/menu.html
@@ -23,12 +23,13 @@
         <a class="dropdown-toggle" data-toggle="dropdown" href="#">USUARIOS
         <span class="caret"></span></a>
         <ul class="dropdown-menu">
-          <li><a href="/registrarCuenta">CLIENTES</a></li>
+          <li><a>CLIENTES</a></li>
+          <li><a href="/Usuarios/todos">Ver todos</a></li>
           <li><a href="/Usuarios/nuevo"><span class="glyphicon glyphicon-user"></span> Crear cuenta</a></li>
         </ul>
       </li>
         {% endif %}
-        {% if current_user.is_authenticated and current_user.is_comprador() %}
+        {% if current_user.is_authenticated and (current_user.is_comprador() or current_user.is_admin) %}
      <li class="dropdown">
          <a class="dropdown-toggle" data-toggle="dropdown" href="#">PEDIDOS
         <span class="caret"></span></a>
