--- a/PruebaAplicacion/templates/usuarios/consultaIndividual.html
+++ b/PruebaAplicacion/templates/usuarios/consultaIndividual.html
@@ -9,68 +9,64 @@
     <form action="/Usuarios/editarPerfil" method="POST">
         <div class="form-group">
             <label for="ID">ID:</label>
-            <input type="number" name="ID" maxlength="12" class="form-control" required value="{{current_user.idUsuario}}" readonly>
+            <input type="number" name="ID" maxlength="12" class="form-control" required value="{{usuario.idUsuario}}" readonly>
         </div>
         <div class="form-group">
             <label for="nombre">Nombre completo:</label>
-            <input class="form-control form-control-lg" type="text" name="nombre" maxlength="50"  placeholder="Nombre Completo"  value="{{current_user.nombreCompleto}}"  required>
+            <input class="form-control form-control-lg" type="text" name="nombre" maxlength="50"  placeholder="Nombre Completo"  value="{{usuario.nombreCompleto}}"  required>
         </div>
         <div class="form-group">
             <label for="email">Email:</label>
-            <input type="email" name="email" maxlength="50" class="form-control form-control-lg" required value="{{current_user.email}}">
+            <input type="email" name="email" maxlength="50" class="form-control form-control-lg" required value="{{usuario.email}}">
         </div>
         <div class="form-group">
             <label for="direccion">Dirección</label>
-            <input type="text" name="direccion" maxlength="60" class="form-control" required value="{{current_user.direccion}}">
+            <input type="text" name="direccion" maxlength="60" class="form-control" required value="{{usuario.direccion}}">
         </div>
         <div class="form-group">
             <label for="telefono">Telefono:</label>
-            <input type="tel" name="telefono" maxlength="12" class="form-control" required value="{{current_user.telefono}}">
+            <input type="tel" name="telefono" maxlength="12" class="form-control" required value="{{usuario.telefono}}">
         </div>
         <div class="form-group">
             <label for="clave">Password:</label>
             <input type="password" name="password" maxlength="20" class="form-control" value="" required>
         </div>
-        <div class="form-group">
-            <a href="/Usuarios/verTarjetas/{{current_user.idUsuario}}" class="btn btn-lg btn-success">
-            <span class="glyphicon glyphicon-fire"></span>
-            Metodos de pago
-        </a>
-        </div>
         <div class="radio">
             <label>Genero:</label>
-            {% if current_user.genero=='F' %}
+            {% if usuario.genero == 'F' %}
             <label class="radio-inline"><input type="radio" name="genero" value="F" checked>Femenino</label>
             <label class="radio-inline"><input type="radio" name="genero" value="M">Masculino</label>
             {% else %}
             <label class="radio-inline"><input type="radio" name="genero" value="F">Femenino</label>
-            <label class="radio-inline"><input type="radio" name="genero" value="M" checked="">Masculino</label>
+            <label class="radio-inline"><input type="radio" name="genero" value="M" checked>Masculino</label>
             {% endif %}
         </div>
         <div class="radio">
             <label>Tipo:</label>
-            {% if current_user.is_authenticated %}
-            {% if current_user.is_admin() %}
+            {% if usuario.tipo == 'Comprador' %}
+            <label class="radio-inline"><input type="radio" name="tipo" value="Comprador" checked>Comprador</label>
+            <label class="radio-inline"><input type="radio" name="tipo" value="Vendedor">Vendedor</label>
+            <label class="radio-inline"><input type="radio" name="tipo" value="Administrador">Administrador</label>
+            {% endif %}
+            {% if usuario.tipo == 'Vendedor' %}
+            <label class="radio-inline"><input type="radio" name="tipo" value="Comprador">Comprador</label>
+            <label class="radio-inline"><input type="radio" name="tipo" value="Vendedor" checked>Vendedor</label>
+            <label class="radio-inline"><input type="radio" name="tipo" value="Administrador">Administrador</label>
+            {% endif %}
+            {% if usuario.tipo == 'Administrador' %}
             <label class="radio-inline"><input type="radio" name="tipo" value="Comprador">Comprador</label>
             <label class="radio-inline"><input type="radio" name="tipo" value="Vendedor">Vendedor</label>
             <label class="radio-inline"><input type="radio" name="tipo" value="Administrador" checked>Administrador</label>
             {% endif %}
-            {% if current_user.is_vendedor() %}
-            <label class="radio-inline"><input type="radio" name="tipo" value="Vendedor" checked>Vendedor</label>
-            {% endif %}
-            {% if current_user.is_comprador() %}
-            <label class="radio-inline"><input type="radio" name="tipo" value="Comprador" checked>Comprador</label>
-            {% endif %}
-            {% endif %}
         </div>
-        <input type="hidden" name="bandera" value="usuario">
+        <input type="hidden" name="bandera" value="admin">
         <button class="btn btn-primary mb-3" type="submit">
             <span class="glyphicon glyphicon-floppy-disk"></span>
             Guardar Cambios
         </button>
     </form>
     <br>
-        <a href="/Usuarios/eliminar/{{current_user.idUsuario}}" class="btn btn-danger mb-3">
+        <a href="/Usuarios/eliminar/" class="btn btn-danger mb-3">
             <span class="glyphicon glyphicon-circle-arrow-left"></span>
             Eliminar Cuenta
         </a>
