--- a/PruebaAplicacion/templates/productos/consultaGeneral.html
+++ b/PruebaAplicacion/templates/productos/consultaGeneral.html
@@ -4,6 +4,7 @@
     {% include 'comunes/menu.html' %}
 {% endblock %}
 {% block contenido %}
+{{super()}}
     <h1>LISTADO DE PRODUCTOS</h1>
     {% if current_user.is_authenticated and current_user.is_vendedor() %}
     <a href="/productos/nuevo" class="btn btn-success">
@@ -31,7 +32,7 @@
                 <td>{{prod.nombre}}</td>
                 <td>{{prod.descripcion}}</td>
                 <td>{{prod.categoria.nombre}}</td>
-                <td>{{prod.precioVenta}}</td>
+                <td>${{prod.precioVenta}}</td>
                 <td><img src="/productos/consultarImagen/{{prod.idProducto}}" width="100px" height="80px"></td>
                 <td><img src="/productos/consultarEspecificaciones/{{prod.idProducto}}" width="100px" height="80px"></td>
                 <td>{{prod.existencia}}</td>
