--- a/PruebaAplicacion/templates/productos/editar.html
+++ b/PruebaAplicacion/templates/productos/editar.html
@@ -4,6 +4,7 @@
     {% include 'comunes/menu.html' %}
 {% endblock %}
 {% block contenido %}
+{{super()}}
 <div>
     <h1 class="bg-primary text-center">Edicion de Producto</h1>
     <form action="/productos/editar" method="post" enctype="multipart/form-data">
@@ -12,8 +13,16 @@
             <input type="number" name="id"  required class="form-control" value="{{prod.idProducto}}" readonly class="form-control">
         </div>
         <div class="form-group">
-            <label for="idCategoria"> idCategoria: </label>
-            <input type="number" name="idcategoria"   class="form-control" value="{{prod.idCategoria}}">
+            <label for="Categoria"> Categoria: </label>
+            <select name='Categoria'  class="form-control">
+              {% for c in cat %}
+                {% if c.nombre == prod.categoria.nombre %}
+                  <option value="{{c.idCategoria}}" selected>{{c.nombre}}</option>
+                {% else %}
+                  <option value="{{c.idCategoria}}">{{c.nombre}}</option>
+                {% endif %}
+              {% endfor %}
+            </select>
         </div>
         <div class="form-group">
             <label for="nombre">Nombre:</label>
@@ -33,15 +42,19 @@
         </div>
         <div class="form-control">
             <label for="estatus">Estatus:</label>
+            <select name='estatus'>
             {% if prod.estatus=='Activo'%}
-                <input type="checkbox" name="estatus" value="Activo" checked>
+                <option selected>Activo</option>
+                <option>Inactivo</option>
             {% else %}
-                <input type="checkbox" name="estatus" value="Inactivo">
+                <option>Activo</option>
+                <option selected>Inactivo</option>
             {% endif %}
+            </select>
         </div>
         <div class="form-group">
             <label>foto:</label>
-            <input type="file" name="foto" placeholder="foto del Producto" class="form-control">
+            <input type="file" name="foto" placeholder="foto del Producto" class="form-control" value="{{prod.foto}}">
             <a href="#" data-toggle="modal" data-target="#foto">
                 <span class="glyphicon glyphicon-eye-open"></span>Ver Foto
             </a>
@@ -99,7 +112,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">Foro del producto: <b>{{prod.nombre}}</b></h4>
+        <h4 class="modal-title">Foto del producto: <b>{{prod.nombre}}</b></h4>
       </div>
       <div class="modal-body">
         <img src="/productos/consultarImagen/{{prod.idProducto}}" width="200px" height="150px">
@@ -127,7 +140,7 @@
         <p>¿ Estas seguro de eliminar el Producto:<b>{{prod.nombre}} ?</b> </p>
       </div>
       <div class="modal-footer">
-          <a class="btn btn-primary" href="/productis/eliminacionfisica/{{prod.idProducto}}">Aceptar</a>
+          <a class="btn btn-primary" href="/productos/eliminacionfisica/{{prod.idProducto}}">Aceptar</a>
           <button type="button" class="btn btn-info" data-dismiss="modal">Cancelar</button>
       </div>
     </div>
