--- a/PruebaAplicacion/templates/usuarios/VerPerfil.html
+++ b/PruebaAplicacion/templates/usuarios/VerPerfil.html
@@ -29,7 +29,7 @@
         </div>
         <div class="form-group">
             <label for="clave">Password:</label>
-            <input type="password" name="password" maxlength="20" class="form-control" value="" required>
+            <input type="password" name="password" maxlength="20" class="form-control" value="">
         </div>
         <div class="form-group">
             <a href="/Usuarios/verTarjetas/{{current_user.idUsuario}}" class="btn btn-lg btn-success">
