--- a/PruebaAplicacion/templates/usuarios/consultaIndividual.html
+++ b/PruebaAplicacion/templates/usuarios/consultaIndividual.html
@@ -12,6 +12,18 @@
             <input type="number" name="ID" maxlength="12" class="form-control" required value="{{usuario.idUsuario}}" readonly>
         </div>
         <div class="form-group">
+            <label for="estatus">Estatus:</label>
+            <select name='estatus' class="form-control">
+                {% if usuario.estatus == 'Activo' %}
+                <option selected>Activo</option>
+                <option>Inactivo</option>
+                {% else %}
+                <option>Activo</option>
+                <option selected>Inactivo</option>
+                {% endif %}
+            </select>
+        </div>
+        <div class="form-group">
             <label for="nombre">Nombre completo:</label>
             <input class="form-control form-control-lg" type="text" name="nombre" maxlength="50"  placeholder="Nombre Completo"  value="{{usuario.nombreCompleto}}"  required>
         </div>
@@ -29,7 +41,7 @@
         </div>
         <div class="form-group">
             <label for="clave">Password:</label>
-            <input type="password" name="password" maxlength="20" class="form-control" value="" required>
+            <input type="password" name="password" maxlength="20" class="form-control" value="">
         </div>
         <div class="radio">
             <label>Genero:</label>
@@ -66,10 +78,6 @@
         </button>
     </form>
     <br>
-        <a href="/Usuarios/eliminar/" class="btn btn-danger mb-3">
-            <span class="glyphicon glyphicon-circle-arrow-left"></span>
-            Eliminar Cuenta
-        </a>
         <a href="/" class="btn btn-danger mb-3">
             <span class="glyphicon glyphicon-circle-arrow-left"></span>
             Regresar
