--- a/Shopitesz_prueba/static/css/estilo.css
+++ b/Shopitesz_prueba/static/css/estilo.css
@@ -1,13 +1,13 @@
 
 .tituloHeader{
-	color:blue;
+	color:black;
 	font-size: 30px;
 	font-family: Impact, Haettenschweiler, 'Arial'
 }
 
 .linkButton{
-	background: red;
-	border: 1px solid black;
+	background: #2B312D ;
+	border: 2px solid black;
 	text-decoration: none;
 }
 body{
@@ -69,18 +69,18 @@ p[class="inicio"]{
     box-sizing: border-box;
 }
 .fotoPerfil{
-    width: 25%;
+    /* login*/
+    width: 150px;
     padding: 1px;
-    margin-top: 11px;
+    margin-top: ;
     margin: auto;
-    margin-left:180px;
+    margin-left:500px;
 
 }
 
 .contenedor {
-    width: 100%;
+    width: 50%;
     padding: 15px;
-
 }
 .contenedor2 {
     width: 100%;
@@ -155,7 +155,7 @@ p{
 }
 .link{
     text-decoration: none;
-    color: #2491AB;
+    color: #59D85D;
     font-weight: 680;
 }
 .link:hover{
@@ -182,11 +182,97 @@ p{
 
 }
 
+
+.login-box {
+  width: 320px;
+  height: 420px;
+  background: none;
+  color: #fff;
+  top: 65%;
+  left: 50%;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  box-sizing: border-box;
+  padding: 70px 30px;
+}
+
+.login-box .avatar {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  position: absolute;
+  top: -50px;
+  left: calc(50% - 50px);
+}
+
+.login-box h1 {
+  margin: 0;
+  padding: 0 0 20px;
+  text-align: center;
+  font-size: 22px;
+  color: black;
+}
+
+.login-box label {
+  margin: 0;
+  padding: 0;
+  font-weight: bold;
+  display: block;
+}
+
+.login-box input {
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.login-box input[type="email"], .login-box input[type="password"] {
+  border: none;
+  border-bottom: 1px solid black;
+  background: transparent;
+  outline: none;
+  height: 40px;
+  color: black;
+  font-size: 16px;
+}
+
+.login-box input[type="submit"] {
+  border: none;
+  outline: none;
+  height: 40px;
+  background: #b80f22;
+  color: #fff;
+  font-size: 18px;
+  border-radius: 20px;
+}
+
+.login-box input[type="submit"]:hover {
+  cursor: pointer;
+  background: #ffc107;
+  color: #000;
+}
+
+.login-box a {
+  text-decoration: none;
+  font-size: 12px;
+  line-height: 20px;
+  color: black;
+}
+.login-box p {
+  text-decoration: none;
+  font-size: 12px;
+  line-height: 20px;
+  color: black;
+}
+
+.login-box a:hover {
+  color: #fff;
+}
+
 @media(min-width: 768px){
     .formulario{
         margin: auto;
         width: 500px;
-        margin-top: 110px;
+        margin-top: auto;
         border-radius: 5%;
     }
     .lista{
