--- a/Shopitesz_prueba/templates/productos/agregar.html
+++ b/Shopitesz_prueba/templates/productos/agregar.html
@@ -8,8 +8,12 @@
     <h1 class="bg-primary text-center">Registro de Categorias</h1>
     <form action="/productos/agregar" method="post" enctype="multipart/form-data">
         <div class="form-group">
-            <label for="idCategoria"> idCategoria: </label>
-            <input type="number" name="idcategoria" placeholder="idCategoria" required class="form-control">
+            <label for="Categoria"> Categoria: </label>
+            <select name='Categoria'  class="form-control">
+              {% for c in cat %}
+                  <option value="{{c.idCategoria}}">{{c.nombre}}</option>
+              {% endfor %}
+            </select>
         </div>
         <div class="form-group">
             <label for="nombre">Nombre:</label>
