agregacion de update y delete de carrito, tambien el ver de detalles pedido

--- a/Shopitesz_prueba/templates/envios/editar.html
+++ b/Shopitesz_prueba/templates/envios/editar.html
@@ -20,7 +20,7 @@
           <input type="number" name="IDENVIO" value="{{envio.IDENVIO}}" readonly class="form-control">
           <br>
           IDPEDIDO:
-          <input type="number" name="IDPEDIDO" value="{{envio.IDPEDIDO}}" class="form-control">
+          <input type="number" name="IDPEDIDO" value="{{envio.IDPEDIDO}}" readonly class="form-control">
           <br>
           PAQUETERIA:
           <select name="IDPAQUETERIA">
