--- a/Shopitesz_prueba/templates/pedidosclt/consulta.html
+++ b/Shopitesz_prueba/templates/pedidosclt/consulta.html
@@ -22,6 +22,7 @@
         <th>FECHA DE RECEPCION</th>
         <th>TOTAL</th>
         <th>ESTATUS</th>
+        <th>VER DETALLES</th>
         {% for ped in pedido %}
             <tr>
                 <td>{{ped.idPedido}}</td>
@@ -38,6 +39,13 @@
                 <td>{{ped.fechaCierre}}</td>
                 <td>{{ped.total}}</td>
                 <td>{{ped.estatus}}</td>
+                {% if current_user.is_authenticated %}
+                    <td>
+                        <a href="/Pedidos/verpedidos/detallespedidos/{{ped.idPedido}}">
+                            <span class="glyphicon glyphicon-eye-open"></span>
+                        </a>
+                    </td>
+                {% endif %}
             </tr>
         {% endfor %}
     </table>
