--- a/Shopitesz_prueba/templates/pedidosclt/consulta.html
+++ b/Shopitesz_prueba/templates/pedidosclt/consulta.html
@@ -23,6 +23,7 @@
         <th>TOTAL</th>
         <th>ESTATUS</th>
         <th>VER DETALLES</th>
+        <th>VER</th>
         {% for ped in pedido %}
             <tr>
                 <td>{{ped.idPedido}}</td>
@@ -45,7 +46,13 @@
                             <span class="glyphicon glyphicon-eye-open"></span>
                         </a>
                     </td>
+                <td>
+                        <a href="/Pedidos/verpedidos/en/{{ped.idPedido}}">
+                            <span class="glyphicon glyphicon-eye-open"></span>
+                        </a>
+                 </td>
                 {% endif %}
+
             </tr>
         {% endfor %}
     </table>
