--- a/Shopitesz_prueba/templates/usuarios/registrarCuenta.html
+++ b/Shopitesz_prueba/templates/usuarios/registrarCuenta.html
@@ -1,41 +1,48 @@
 {% extends 'comunes/base.html' %}
 {% block contenido %}
     {{super()}}
-    <h1 class="bg-primary text-center">Registro de cuentas</h1>
-    <form action="/Usuarios/agregar" method="post">
+    <h1 class="bg-primary text-center" onclick="alert('Se hizo click')" onclick="imprimirMsg()">Registro de Usuarios</h1>
+    <form action="/Usuarios/agregar" method="post" onsubmit="return validar(this)">
         <div class="form-group">
             <label for="nombre">Nombre completo:</label>
-            <input type="text" name="nombre" maxlength="50"  placeholder="Nombre Completo", class="form-control">
+            <input class="form-control form-control-lg" type="text" name="nombre" maxlength="50"  placeholder="Nombre Completo" required>
         </div>
         <div class="form-group">
             <label for="email">Email:</label>
-            <input type="email" name="email" maxlength="50" placeholder="ejemplo@hotmail.com" class="form-control">
+            <input type="email" name="email" maxlength="50" class="form-control form-control-lg" required>
         </div>
         <div class="form-group">
             <label for="direccion">Dirección</label>
-            <input type="text" name="direccion" maxlength="60" placeholder="Ruta de chapultepec #138" class="form-control">
+            <input type="text" name="direccion" maxlength="60" class="form-control" required>
         </div>
         <div class="form-group">
             <label for="clave">Password:</label>
-            <input type="password" name="password" maxlength="20" class="form-control">
+            <input type="password" name="password" id="password" maxlength="20" class="form-control" required>
+        </div>
+        <input type="checkbox" id="verPassword" onchange="verPasswords()">Ver password
+        <div class="form-group">
+            <label for="clave">Confirmar Password:</label>
+            <input type="password" name="passwordConfirmacion" id="passwordConfirmacion" maxlength="20" class="form-control" required>
         </div>
         <div class="form-group">
             <label for="telefono">Telefono:</label>
-            <input type="tel" name="telefono" maxlength="12" placeholder="351 913 8233" class="form-control">
+            <input type="tel" name="telefono" maxlength="12" class="form-control" required>
         </div>
         <div class="radio">
             <label>Genero:</label>
             <label class="radio-inline"><input type="radio" name="genero" value="F" checked>Femenino</label>
             <label class="radio-inline"><input type="radio" name="genero" value="M">Masculino</label>
         </div>
+
         <div class="radio">
             <label>Tipo:</label>
             <label class="radio-inline"><input type="radio" name="tipo" value="Comprador" checked>Comprador</label>
             {% if current_user.is_authenticated and current_user.is_admin() %}
             <label class="radio-inline"><input type="radio" name="tipo" value="Vendedor">Vendedor</label>
             <label class="radio-inline"><input type="radio" name="tipo" value="Administrador">Administrador</label>
-            {% endif %}
         </div>
+        {% endif %}
+        <br>
         <button type="submit" class="btn btn-primary mb-3">
             <span class="glyphicon glyphicon-floppy-disk"></span>
             Registrar
@@ -45,4 +52,11 @@
             Regresar
         </a>
     </form>
+<div id="notificaciones">
+
+</div>
+{% endblock %}
+{% block scripts %}
+{{super()}}
+    <script src="{{url_for('static',filename='js/usuarios.js')}}"></script>
 {% endblock %}
