--- a/PruebaAplicacion/templates/tarjetas/editar.html
+++ b/PruebaAplicacion/templates/tarjetas/editar.html
@@ -7,7 +7,7 @@
 <div>
 
     <h1 class="bg-primary text-center">Editar Tarjeta</h1>
-    <form action="/tarjeta/editar/{{current_user.idUsuario}}" method="post" enctype="multipart/form-data">
+    <form action="/tarjeta/editar/{{current_user.idUsuario}}" method="POST" onsubmit="return validarTarjetas(this)" enctype="multipart/form-data">
         <div class="form-group">
             <label for="ID"> idTarjeta: </label>
             <input type="number" name="ID"   class="form-control" value="{{tar.idTarjeta}}" readonly >
@@ -15,6 +15,10 @@
         <div class="form-group">
             <label for="IDU"> idUsuario: </label>
             <input type="number" name="IDU"   class="form-control" value="{{current_user.idUsuario}}"readonly>
+        </div>
+        <div class="form-group">
+            <label for="nombre">Nombre Usuario: </label>
+            <input type="text" name="nombre"   class="form-control" value="{{current_user.nombreCompleto}}"readonly>
         </div>
         <div class="form-group">
             <label for="noTarjeta">noTarjeta:</label>
@@ -73,4 +77,12 @@
 
 </div>
 
+<div id="notificaciones">
+
+</div>
+
+{% endblock %}
+{% block scripts %}
+{{super()}}
+    <script src="{{url_for('static',filename='js/Tarjetas.js')}}"></script>
 {% endblock %}
