Edicion manual del pedido, e implementación del carrito

--- a/PruebaAplicacion/templates/comunes/menu.html
+++ b/PruebaAplicacion/templates/comunes/menu.html
@@ -9,13 +9,13 @@
       <a class="navbar-brand" href="/" >SHOPITESZ</a>
     </div>
     <ul class="nav navbar-nav">
-      <li class="active"><a href="/">Home</a></li>
       <li class="dropdown">
         <a class="dropdown-toggle" data-toggle="dropdown" href="#">CATALOGOS
         <span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li><a href="/Categorias">CATEGORIAS</a></li>
           <li><a href="/productos">PRODUCTOS</a></li>
+          <li><a href="/productos/categorias">PRODUCTOS POR CATEGORIA</a></li>
         </ul>
       </li>
         {% if current_user.is_authenticated and current_user.is_admin() %}
@@ -47,7 +47,7 @@
         <ul class="dropdown-menu">
           <li><a href="/pedidosclt/pedidospedir">HACER UN PEDIDO</a></li>
           <li><a href="/pedidosclt">PEDIDOS</a></li>
-          <li><a href="/pedidosclt/pedidosdetalle">DETALLES PEDIDOS</a></li>
+          <li><a href="/Pedidos/verpedidos/{{current_user.idUsuario}}">VER PEDIDOS</a></li>
         </ul>
          <li><a href="/Usuarios/verPerfil"><span class="glyphicon glyphicon-user"></span>{{current_user.nombreCompleto}}</a></li>
          {% endif %}
@@ -57,15 +57,6 @@
                     <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="/Envios">VER ENVIOS</a></li>
-                </ul>
-            {% endif %}
-
-                    {% if current_user.is_authenticated and (current_user.is_comprador() or current_user.is_vendedor())%}
-                <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">PEDIDOS
-                    <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="/Pedidos/verpedidos/{{current_user.idUsuario}}">VER PEDIDOS</a></li>
                 </ul>
             {% endif %}
              {% if current_user.is_authenticated and current_user.is_comprador()%}
